[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanyupy"
version = "0.1.0"
description = "hanyupy - 让你用中文编写Python代码"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "hanyupy", email = "hanyupy@example.com"}
]
keywords = ["中文", "Python", "chinese", "编程", "programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/hanyupy"
Documentation = "https://github.com/yourusername/hanyupy#readme"
Repository = "https://github.com/yourusername/hanyupy.git"
"Bug Tracker" = "https://github.com/yourusername/hanyupy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hanyupy*"]

[tool.setuptools.package-data]
hanyupy = ["*.py"]